<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/foodle"
    android:id="@+id/relative_register"
    tools:context=".activity.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_marginTop="220dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="bottom"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_name"
                android:hint="Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_marginTop="12dp"
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/username_rounded"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_marginTop="12dp"
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/password_rounded"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:hint="@string/confirm"
                android:layout_marginTop="12dp"
                android:id="@+id/text_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/password_rounded"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:background="@drawable/button_rounded_accent"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_marginTop="9dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have account?"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/signin"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:text="Signin here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>